fixing a spacing issue in the sidebar

--- a/css/main.css
+++ b/css/main.css
@@ -556,7 +556,7 @@ header nav ul li ul li a:hover {
 
 .sidebar ul li img {
     float: left;
-    margin: -5px 3px 0 0;
+    margin: -2px 3px 0 0;
 }
 
 #content {
